--- a/src/variables.modules.scss
+++ b/src/variables.modules.scss
@@ -3,7 +3,7 @@ $pink: #ca6be6;
 $white: #f8f8f8;
 $dark: #1f1f1f;
 $red: #ff6057;
-$yellow: #ffbd2e;
+$yellow: #e5c64d;
 $green: #27c93f;
 $lightgray: #c9c9c9;
 
